<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.colorwars.MainActivity" >

    <Spinner
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@layout/settings"
        android:spinnerMode="dropdown"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TimeLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@layout/settings"
        android:layout_below="@+id/mode"
        android:text="@string/Time"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@layout/settings"
        android:layout_alignRight="@+id/TimeLimit"
        android:layout_below="@+id/TimeLimit"
        android:text="05"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textView3"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/MoveLimit"
        android:text="20"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@layout/settings"
        android:layout_below="@+id/textView2"
        android:text="@string/C1"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/C2"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/MoveLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/mode"
        android:layout_marginRight="14dp"
        android:text="@string/Moves"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/Col1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@layout/settings"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4" />

    <Spinner
        android:id="@+id/Col2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignTop="@+id/Col1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Col1"
        android:layout_below="@+id/Col1"
        android:layout_alignLeft="@layout/settings"
        android:text="@string/C3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Col2"
        android:layout_below="@+id/Col2"
        android:text="@string/C4"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/Col3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@layout/settings"
    
        android:layout_alignRight="@+id/textView6"
        android:layout_below="@+id/textView6" />

    <Spinner
        android:id="@+id/Col4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/textView1" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Music"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginBottom="16dp"
        android:text="@string/Play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:text="@string/GameMode"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:layout_alignLeft="@layout/settings"
        android:typeface="monospace" />
    
</RelativeLayout>
